# Gitlab-CICD

./: .gitlab-ci.yml  README.md
cicd/: gtest-pipeline.yml  simple-pipeline.yml
project/: CMakeLists.txt
project-gtest-lcov/: CMakeLists.txt  check_coverage.cmake  main.cpp
project-gtest-lcov/src/: lib.cpp  lib.h
project-gtest-lcov/test/: test.cpp
